--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,17 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
+    <!--<listener>-->
+        <!--<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>-->
+    <!--</listener>-->
+
+    <!--&lt;!&ndash;4.  设定配置文件列表 设置全局参数 为3的参数配置信息&ndash;&gt;-->
+    <!--<context-param>-->
+        <!--<param-name>contextConfigLocation</param-name>-->
+        <!--<param-value>classpath:spring.xml,classpath:applicationContext.xml,classpath:ItemConfig.xml,classpath:ItemHolderConfig.xml</param-value>-->
+
+    <!--</context-param>-->
+
     <!--1.配置spring分发器(是总的控制中心  被拦截的url会汇聚到该servlet) -->
     <servlet>
         <servlet-name>springmvc</servlet-name>
@@ -15,7 +26,7 @@
         <!--配置spring上下文  (从该目录下加载spring mvc的配置文件) -->
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <param-value>classpath:spring.xml</param-value>
+            <param-value>classpath:spring.xml,classpath:spring.xml,classpath:applicationContext.xml,classpath:ItemConfig.xml,classpath:ItemHolderConfig.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>  <!-- tomcat启动后立即加载 -->
     </servlet>
@@ -27,15 +38,7 @@
     </servlet-mapping>
 
     <!--3. 注册配置文件读取器，监听spring配置文件的变化 详见 注3-->
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
 
-    <!--4.  设定配置文件列表 设置全局参数 为3的参数配置信息-->
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:spring.xml</param-value>
-    </context-param>
 
 
 </web-app>
