--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,12 @@
       <version>4.3.3.RELEASE</version>
     </dependency>
 
-
+    <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.16</version>
+    </dependency>
   </dependencies>
 
   <build>
