--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=INFO, Console, File
+log4j.rootLogger=INFO, Console
 ###### Console appender definition #######
 # All outputs currently set to be a ConsoleAppender.  
 log4j.appender.Console=org.apache.log4j.ConsoleAppender  
