更新，没什么重要的。

--- a/src/main/webapp/working/package.json
+++ b/src/main/webapp/working/package.json
@@ -14,7 +14,7 @@
     "gulp-util": "*",
     "gulp-watch": "*",
     "gulp-jshint":"*",
-    "gulp-html-replace":"*"
+    "gulp-replace":"*"
   },
 
   "scripts": {
